corretta propagazione dell'errore

--- a/KATER/PYTHON/misura_g.ipynb
+++ b/KATER/PYTHON/misura_g.ipynb
@@ -10,19 +10,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "T1,sigmaT1 = 2.0026, 1.4138 # interpolazione formula T*\n",
     "T2,sigmaT2 = 2.0022, 0.096 # valori raccolti formula T*\n",
     "T3,sigmaT3 = 2.0026, 0.1196 # risoluzione sistema 1\n",
-    "T4,sigmaT4 = 2.0026, 0.0245 # risoluzione sistema 2"
+    "T4,sigmaT4 = 2.0026, 0.0245 # risoluzione sistema 2\n",
+    "\n",
+    "T5,sigmaT5 = 2.0026, 0.0024 # propagazione corretta con derivate parziali"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -32,7 +34,8 @@
       "T1:  9.785 ± 13.816 m s^{-2}\n",
       "T2:  9.789 ± 0.939 m s^{-2}\n",
       "T3:  9.785 ± 1.169 m s^{-2}\n",
-      "T4:  9.785 ± 0.239 m s^{-2}\n"
+      "T4:  9.785 ± 0.239 m s^{-2}\n",
+      "T5:  9.7849 ± 0.0235 m s^{-2}\n"
      ]
     }
    ],
@@ -49,7 +52,8 @@
     "print('T1: ',final_val(*g_T(T1,sigmaT1),decimals=3,udm='m s^{-2}'))\n",
     "print('T2: ',final_val(*g_T(T2,sigmaT2),decimals=3,udm='m s^{-2}'))\n",
     "print('T3: ',final_val(*g_T(T3,sigmaT3),decimals=3,udm='m s^{-2}'))\n",
-    "print('T4: ',final_val(*g_T(T4,sigmaT4),decimals=3,udm='m s^{-2}'))"
+    "print('T4: ',final_val(*g_T(T4,sigmaT4),decimals=3,udm='m s^{-2}'))\n",
+    "print('T5: ',final_val(*g_T(T5,sigmaT5),decimals=4,udm='m s^{-2}'))"
    ]
   }
  ],
