--- a/KATER/PYTHON/stima_T.ipynb
+++ b/KATER/PYTHON/stima_T.ipynb
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -271,6 +271,68 @@
     "sigmaT = np.sqrt(bx**2+sA1**2)\n",
     "\n",
     "print('T: ',final_val(T,sigmaT,decimals=4))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# PROPAGAZIONE DELL'ERRORE CORRETTA\n",
+    "\n",
+    "$a = T_1(x_a) \\\\ c = T_1(x_b) \\\\\n",
+    "b = T_2(x_a) \\\\ d = T_2(x_b)$\n",
+    "\n",
+    "$\\sigma_T = \\sqrt{\n",
+    "    \\left(\\frac{\\partial T}{\\partial a}\\right)^2\\sigma_{a}^2 +\n",
+    "    \\left(\\frac{\\partial T}{\\partial b}\\right)^2\\sigma_{b}^2 +\n",
+    "    \\left(\\frac{\\partial T}{\\partial c}\\right)^2\\sigma_{c}^2 +\n",
+    "    \\left(\\frac{\\partial T}{\\partial d}\\right)^2\\sigma_{d}^2\n",
+    "}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T:  2.0026 ± 0.0024 \n"
+     ]
+    }
+   ],
+   "source": [
+    "T1 = lambda x: r1.A + r1.B * x # definisco le funzioni come sopra\n",
+    "T2 = lambda x: r2.A + r2.B * x\n",
+    "\n",
+    "xa = h1_sqrt[6] # prendo i valori delle x più vicine all'intersezione\n",
+    "xb = h1_sqrt[7]\n",
+    "\n",
+    "a = T1(xa) # rinomino le variabili\n",
+    "b = T2(xa)\n",
+    "c = T1(xb)\n",
+    "d = T2(xb)\n",
+    "\n",
+    "T = (b*c - a*d)/(c-d-a+b) # calcolo il periodo\n",
+    "\n",
+    "sa, sb = r1.sigmaY[6],r1.sigmaY[7] # raccolgo i sigma\n",
+    "sc, sd = r2.sigmaY[6],r2.sigmaY[7]\n",
+    "\n",
+    "g = (c-d-a+b) # holder per accorciare le formule\n",
+    "f = (b*c-a*d)\n",
+    "\n",
+    "dTda = (-d*g+f) / g**2 # derivate parziali\n",
+    "dTdb = (c*g-f) / g**2\n",
+    "dTdc = (b*g-f) / g**2\n",
+    "dTdd = (-a*g+f) / g**2\n",
+    "\n",
+    "sigmaT = np.sqrt((dTda*sa)**2 + (dTdb*sb)**2 + (dTdc*sc)**2 + (dTdd*sd)**2)\n",
+    "\n",
+    "print('T: ',final_val(T,sigmaT,decimals=4))\n",
+    "\n"
    ]
   }
  ],
