--- a/KATER/PYTHON/stima_T.ipynb
+++ b/KATER/PYTHON/stima_T.ipynb
@@ -17,6 +17,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "[2.0584036  2.04860419 2.03912633 2.0299403  2.02102071 2.01234563\n",
+      " 2.00389599 1.99565509 1.98760816] [2.0557 2.0511 2.0418 2.0305 2.0181 2.0109 2.0049 1.995  1.9886]\n",
+      "[ 0.0027036  -0.00249581 -0.00267367 -0.0005597   0.00292071  0.00144563\n",
+      " -0.00100401  0.00065509 -0.00099184]\n",
+      "[2.01415754 2.01212286 2.01015495 2.00824763 2.00639563 2.0045944\n",
+      " 2.00283998 2.0011289  1.9994581 ] [2.0133 2.0122 2.0112 2.0087 2.0066 2.0038 2.0025 2.0013 1.9995]\n",
+      "[ 8.57541957e-04 -7.71370846e-05 -1.04505055e-03 -4.52369079e-04\n",
+      " -2.04367614e-04  7.94402540e-04  3.39981899e-04 -1.71099636e-04\n",
+      " -4.19034954e-05]\n",
       "\n",
       "linearità A + BX\n",
       "    \n",
@@ -27,7 +36,7 @@
       "\n",
       "sigmaY: [0.00223564 0.00222424 0.0022109  0.00220751 0.00222387 0.00224809\n",
       " 0.00221594 0.00221071 0.00224067]\n",
-      "chiquadro ridotto: 0.0\n",
+      "chiquadro ridotto: (2.389160706217271e-06, 4)\n",
       "df: 7\n",
       "    \n",
       "\n",
@@ -41,7 +50,7 @@
       "\n",
       "sigmaY: [0.00066762 0.00065104 0.0006867  0.00066747 0.00063941 0.00077277\n",
       " 0.0006446  0.00064541 0.00065104]\n",
-      "chiquadro ridotto: 0.0\n",
+      "chiquadro ridotto: (2.0315964254922016e-07, 4)\n",
       "df: 7\n",
       "    \n",
       "\n"
