--- a/KATER/PYTHON/misura_g.ipynb
+++ b/KATER/PYTHON/misura_g.ipynb
@@ -19,7 +19,8 @@
     "T3,sigmaT3 = 2.0026, 0.1196 # risoluzione sistema 1\n",
     "T4,sigmaT4 = 2.0026, 0.0245 # risoluzione sistema 2\n",
     "\n",
-    "T5,sigmaT5 = 2.0026, 0.0024 # propagazione corretta con derivate parziali"
+    "T5,sigmaT5 = 2.0026, 0.0024 # propagazione corretta con derivate parziali\n",
+    "T6,sigmaT6 = 2.0026, 0.013 # interpolazione propagata con derivate parziali"
    ]
   },
   {
