--- a/KATER/PYTHON/stima_T.ipynb
+++ b/KATER/PYTHON/stima_T.ipynb
@@ -10,22 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2.0584036  2.04860419 2.03912633 2.0299403  2.02102071 2.01234563\n",
-      " 2.00389599 1.99565509 1.98760816] [2.0557 2.0511 2.0418 2.0305 2.0181 2.0109 2.0049 1.995  1.9886]\n",
-      "[ 0.0027036  -0.00249581 -0.00267367 -0.0005597   0.00292071  0.00144563\n",
-      " -0.00100401  0.00065509 -0.00099184]\n",
-      "[2.01415754 2.01212286 2.01015495 2.00824763 2.00639563 2.0045944\n",
-      " 2.00283998 2.0011289  1.9994581 ] [2.0133 2.0122 2.0112 2.0087 2.0066 2.0038 2.0025 2.0013 1.9995]\n",
-      "[ 8.57541957e-04 -7.71370846e-05 -1.04505055e-03 -4.52369079e-04\n",
-      " -2.04367614e-04  7.94402540e-04  3.39981899e-04 -1.71099636e-04\n",
-      " -4.19034954e-05]\n",
       "\n",
       "linearità A + BX\n",
       "    \n",
@@ -36,7 +27,7 @@
       "\n",
       "sigmaY: [0.00223564 0.00222424 0.0022109  0.00220751 0.00222387 0.00224809\n",
       " 0.00221594 0.00221071 0.00224067]\n",
-      "chiquadro ridotto: (2.389160706217271e-06, 4)\n",
+      "chiquadro ridotto: 0.98\n",
       "df: 7\n",
       "    \n",
       "\n",
@@ -50,7 +41,7 @@
       "\n",
       "sigmaY: [0.00066762 0.00065104 0.0006867  0.00066747 0.00063941 0.00077277\n",
       " 0.0006446  0.00064541 0.00065104]\n",
-      "chiquadro ridotto: (2.0315964254922016e-07, 4)\n",
+      "chiquadro ridotto: 0.85\n",
       "df: 7\n",
       "    \n",
       "\n"
@@ -128,171 +119,16 @@
     "\n",
     "usando la formula data con i valori ricavati dalle interpolazioni\n",
     "\n",
-    "$T* = \\frac{T_2(x_a)T_1(x_b)-T_1(x_a)T_2(x_b)}{T_1(x_b)-T_2(x_b)-T_1(x_a)+T_2(x_a)}$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "T:  2.0026 ± 1.4138 \n"
-     ]
-    }
-   ],
-   "source": [
-    "T1 = lambda x: r1.A + r1.B * x\n",
-    "T2 = lambda x: r2.A + r2.B * x\n",
+    "$T^* = \\frac{T_2(x_a)T_1(x_b)-T_1(x_a)T_2(x_b)}{T_1(x_b)-T_2(x_b)-T_1(x_a)+T_2(x_a)}$\n",
     "\n",
-    "xa = h1_sqrt[6]\n",
-    "xb = h1_sqrt[7]\n",
+    "per comodità rinomino le variabili:\n",
     "\n",
-    "T = (T2(xa)*T1(xb) - T1(xa)*T2(xb))/(T1(xb)-T2(xb)-T1(xa)+T2(xa))\n",
+    "$a = T_1(x_a) \\quad c = T_1(x_b) \\quad\n",
+    "b = T_2(x_a) \\quad d = T_2(x_b)$\n",
     "\n",
-    "T1xa, T1xb = r1.sigmaY[6],r1.sigmaY[7]\n",
-    "T2xa, T2xb = r2.sigmaY[6],r2.sigmaY[7]\n",
+    "$T^* = \\frac{bc-ad}{c-d-a+b}$\n",
     "\n",
-    "no = T2(xa)*T1(xb)*np.sqrt((T2xa/T2(xa))**2 + (T1xb/T1(xb))**2)\n",
-    "ne = T1(xa)*T2(xb)*np.sqrt((T1xa/T1(xa))**2 + (T2xb/T2(xb))**2)\n",
-    "s = np.sqrt(T1xa**2+T2xb**2+T1xb**2+T2xa**2)\n",
-    "n = np.sqrt(no**2+ne**2)\n",
-    "\n",
-    "sigmaT = T*np.sqrt((n/(T2(xa)*T1(xb) - T1(xa)*T2(xb)))**2 + (s/(T1(xb)-T2(xb)-T1(xa)+T2(xa)))**2)\n",
-    "\n",
-    "print('T: ',final_val(T,sigmaT,decimals=4))"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "usando i punti più vicini all'intersezione:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "T:  2.0022 ± 0.096 \n"
-     ]
-    }
-   ],
-   "source": [
-    "T1xa,T1xb = periodo1[6],periodo1[7]\n",
-    "T2xa,T2xb = periodo2[6],periodo2[7]\n",
-    "\n",
-    "T = (T2xa*T1xb - T1xa*T2xb)/(T1xb-T2xb-T1xa+T2xa)\n",
-    "\n",
-    "sT1xa, sT1xb = dev_stdt[6],dev_stdt[7]\n",
-    "sT2xa, sT2xb = dev_stdT[6],dev_stdT[7]\n",
-    "\n",
-    "no = T2xa*T1xb*np.sqrt((sT2xa/T2xa)**2 + (sT1xb/T1xb)**2)\n",
-    "ne = T1xa*T2xb*np.sqrt((sT1xa/T1xa)**2 + (sT2xb/T2xb)**2)\n",
-    "s = np.sqrt(sT1xa**2+sT2xb**2+sT1xb**2+sT2xa**2)\n",
-    "n = np.sqrt(no**2+ne**2)\n",
-    "\n",
-    "sigmaT = T*np.sqrt((n/(T2xa*T1xb - T1xa*T2xb))**2 + (s/(T1xb-T2xb-T1xa+T2xa))**2)\n",
-    "\n",
-    "print('T: ',final_val(T,sigmaT,decimals=4))"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "risolvendo invece il sistema lineare \n",
-    "\n",
-    "$T^* = \\frac{A_1B_2-A_2B_1}{B_2-B_1}$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "T:  2.0026 ± 0.1196 \n"
-     ]
-    }
-   ],
-   "source": [
-    "A1,A2 = r1.A,r2.A\n",
-    "B1,B2 = r1.B,r2.B\n",
-    "\n",
-    "sA1,sA2 = r1.sigmaA,r2.sigmaA\n",
-    "sB1,sB2 = r1.sigmaB,r2.sigmaB\n",
-    "\n",
-    "T = (A1*B2 - A2*B1)/(B2-B1)\n",
-    "\n",
-    "no = A1*B2*np.sqrt((sA1/A1)**2+(sA2/A2)**2)\n",
-    "ne = A2*B1*np.sqrt((sA2/A2)**2+(sB1/B1)**2)\n",
-    "n = np.sqrt(no**2+ne**2)\n",
-    "s = np.sqrt(sB1**2+sB2**2)\n",
-    "sigmaT = T*np.sqrt((n/(A1*B2 - A2*B1))**2+(s/(B2-B1))**2)\n",
-    "\n",
-    "print('T: ',final_val(T,sigmaT,decimals=4))"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "risolvendo il sistema lineare diversamente:\n",
-    "\n",
-    "$T^* = A_1+B_1\\frac{A_1-A_2}{B_2-B_1}$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "T:  2.0026 ± 0.0245 \n"
-     ]
-    }
-   ],
-   "source": [
-    "T = A1 + B1*(A1-A2)/(B2-B1)\n",
-    "\n",
-    "A = np.sqrt(sA1**2+sA2**2)\n",
-    "B = np.sqrt(sB2**2+sB1**2)\n",
-    "x = np.sqrt((A/(A1-A2))**2+(B/(B2-B1))**2)*((A1-A2)/(B2-B1))\n",
-    "bx = ((A1-A2)/(B2-B1))*B1*np.sqrt((sB1/B1)**2+(x/((A1-A2)/(B2-B1)))**2)\n",
-    "sigmaT = np.sqrt(bx**2+sA1**2)\n",
-    "\n",
-    "print('T: ',final_val(T,sigmaT,decimals=4))"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# PROPAGAZIONE DELL'ERRORE CORRETTA\n",
-    "\n",
-    "$a = T_1(x_a) \\\\ c = T_1(x_b) \\\\\n",
-    "b = T_2(x_a) \\\\ d = T_2(x_b)$\n",
-    "\n",
-    "$\\sigma_T = \\sqrt{\n",
+    "$\\sigma_{T^*} = \\sqrt{\n",
     "    \\left(\\frac{\\partial T}{\\partial a}\\right)^2\\sigma_{a}^2 +\n",
     "    \\left(\\frac{\\partial T}{\\partial b}\\right)^2\\sigma_{b}^2 +\n",
     "    \\left(\\frac{\\partial T}{\\partial c}\\right)^2\\sigma_{c}^2 +\n",
@@ -327,7 +163,7 @@
     "\n",
     "T = (b*c - a*d)/(c-d-a+b) # calcolo il periodo\n",
     "\n",
-    "sa, sb = r1.sigmaY[6],r1.sigmaY[7] # raccolgo i sigma\n",
+    "sa, sb = r1.sigmaY[6],r1.sigmaY[7] # rinomino i sigma\n",
     "sc, sd = r2.sigmaY[6],r2.sigmaY[7]\n",
     "\n",
     "g = (c-d-a+b) # holder per accorciare le formule\n",
@@ -342,6 +178,50 @@
     "\n",
     "print('T: ',final_val(T,sigmaT,decimals=4))\n",
     "\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "risolvendo invece il sistema lineare \n",
+    "\n",
+    "$T^* = \\frac{A_1B_2-A_2B_1}{B_2-B_1}$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "T:  2.0026 ± 0.013 \n"
+     ]
+    }
+   ],
+   "source": [
+    "A1,A2 = r1.A,r2.A\n",
+    "B1,B2 = r1.B,r2.B\n",
+    "\n",
+    "sA1,sA2 = r1.sigmaA,r2.sigmaA\n",
+    "sB1,sB2 = r1.sigmaB,r2.sigmaB\n",
+    "\n",
+    "T = (A1*B2 - A2*B1)/(B2-B1) # T*\n",
+    "\n",
+    "f = (A1*B2 - A2*B1)\n",
+    "g = (B2-B1)\n",
+    "\n",
+    "dTdA1 = B2/g # derivate parziali\n",
+    "dTdA2 = -B1/g\n",
+    "dTdB1 = (f-A2*g)/g**2\n",
+    "dTdB2 = (g-f)/g**2\n",
+    "\n",
+    "sigmaT = np.sqrt((dTdA1 * sA1)**2 + (dTdA2 * sA2)**2 + (dTdB1 * sB1)**2 + (dTdB2 * sB2)**2)\n",
+    "print('T: ',final_val(T,sigmaT,decimals=4))\n"
    ]
   }
  ],
