--- a/KATER/PYTHON/stima_T.ipynb
+++ b/KATER/PYTHON/stima_T.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -192,14 +192,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T:  2.0026 ± 0.013 \n"
+      "T:  2.0026 ± 0.0067 \n"
      ]
     }
    ],
@@ -218,7 +218,7 @@
     "dTdA1 = B2/g # derivate parziali\n",
     "dTdA2 = -B1/g\n",
     "dTdB1 = (f-A2*g)/g**2\n",
-    "dTdB2 = (g-f)/g**2\n",
+    "dTdB2 = (A1*g-f)/g**2\n",
     "\n",
     "sigmaT = np.sqrt((dTdA1 * sA1)**2 + (dTdA2 * sA2)**2 + (dTdB1 * sB1)**2 + (dTdB2 * sB2)**2)\n",
     "print('T: ',final_val(T,sigmaT,decimals=4))\n"
