fix propagazione errori

--- a/KATER/PYTHON/misura_g.ipynb
+++ b/KATER/PYTHON/misura_g.ipynb
@@ -5,23 +5,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MISURAZIONE g\n",
+    "## STIMA DI G CON PENDOLO DI KATER\n",
     "\n",
-    "stimiamo il valore di g usando entrambi i periodi trovati\n",
+    "$T = 2\\pi\\sqrt{\\frac{D}{g}} \\Rightarrow g = \\frac{4\\pi^2D}{T^2}$\n",
     "\n",
-    "$T = 2\\pi\\sqrt{\\frac{D}{g}} \\Rightarrow g = \\frac{4\\pi^2D}{T^2}$"
+    "$\\sigma_g = |-8\\pi^2D|\\frac{\\sigma_T}{T^3}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "g:  9.7849 ± 0.0186 ms-2\n"
+      "g:  9.785 ± 0.019 ms-2\n"
      ]
     }
    ],
@@ -36,16 +36,16 @@
     "\n",
     "def g_T(T,sT): # g(T)\n",
     "    g = 4* PI**2 * D / T**2 # calcolo g\n",
-    "    sg = g*2*sT/T # calcolo sigma g\n",
+    "    sg = 8* PI**2 * D * sT/T**3 # calcolo sigma g\n",
     "    return g,sg\n",
     "\n",
     "g,sg = g_T(T,sigmaT) # misura di g\n",
-    "print('g: ',final_val(g,sg,decimals=4,udm='ms-2'))"
+    "print('g: ',final_val(g,sg,decimals=3,udm='ms-2'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
