--- a/KATER/PYTHON/misura_g.ipynb
+++ b/KATER/PYTHON/misura_g.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,8 +64,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CONFRONTO METODI SPERIMENTALI"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -84,9 +92,11 @@
      "text": [
       "Accordo in percentuale Kater: 28% >> 5%\n",
       "(distanza in sigma: 1.09)\n",
+      "errore relativo percentuale: 0.2% << 5%\n",
       "\n",
       "Accordo in percentuale cadura libera: 6% >> 5%\n",
       "(distanza in sigma: 1.83)\n",
+      "errore relativo percentuale: 0.49% << 5%\n",
       "\n"
      ]
     }
@@ -122,11 +132,13 @@
     "\n",
     "p = (1-probability_under_norm(g1,sg1,g_milano))*100\n",
     "print(f'Accordo in percentuale Kater: {int(p)}% >> 5%')\n",
-    "print(f'(distanza in sigma: {np.round(np.abs(g1 - g_milano) / sg1,2)})\\n')\n",
+    "print(f'(distanza in sigma: {np.round(np.abs(g1 - g_milano) / sg1,2)})')\n",
+    "print(f'errore relativo percentuale: {np.round(sg1/g1,3)*100}% << 5%\\n')\n",
     "\n",
     "p = (1-probability_under_norm(g2,sg2,g_milano))*100\n",
     "print(f'Accordo in percentuale cadura libera: {int(p)}% >> 5%')\n",
-    "print(f'(distanza in sigma: {np.round(np.abs(g2 - g_milano) / sg2,2)})\\n')"
+    "print(f'(distanza in sigma: {np.round(np.abs(g2 - g_milano) / sg2,2)})')\n",
+    "print(f'errore relativo percentuale: {np.round(sg2/g2,4)*100}% << 5%\\n')"
    ]
   }
  ],
