fine misura di g

--- a/KATER/PYTHON/misura_g.ipynb
+++ b/KATER/PYTHON/misura_g.ipynb
@@ -140,6 +140,14 @@
     "print(f'(distanza in sigma: {np.round(np.abs(g2 - g_milano) / sg2,2)})')\n",
     "print(f'errore relativo percentuale: {np.round(sg2/g2,4)*100}% << 5%\\n')"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Il pendolo di Kater ha fornito un valore dell'accellerazione di gravità più fedele a quello atteso e più preciso rispetto alla caduta libera"
+   ]
   }
  ],
  "metadata": {
