--- a/02_BILANCIA DI COULOMB/PYTHON/misura_costante_dielettrica_assoluta.ipynb
+++ b/02_BILANCIA DI COULOMB/PYTHON/misura_costante_dielettrica_assoluta.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# misura costante dielettrica assoluta $\\varepsilon_0$\n",
+    "# misura costante $\\varepsilon_0$\n",
     "\n",
     "di seguito vengono fatte due stime per la costante dielettrica assoluta:\n",
     "la prima è basata su misure con distanza variabile (PARTE B) mentre la seconda misure a distanza fissa (PARTE A)\n",
@@ -20,17 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from typing import Final as const\n",
     "import numpy as np\n",
+    "from interpolazione3 import final_val\n",
     "\n",
-    "COSTANTE_DI_TORSIONE: const = 8.62e-05 # da torsione PARTE C\n",
-    "sigma_COSTANTE_DI_TORSIONE: const = 0.07e-05\n",
+    "COSTANTE_DI_TORSIONE = 8.705110844840937e-05 # da torsione PARTE C\n",
+    "sigma_COSTANTE_DI_TORSIONE = 2.872700601623965e-07\n",
     "\n",
-    "raggio: const = 0.017 # m"
+    "raggio = 0.017 # m"
    ]
   },
   {
@@ -45,24 +45,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.24e-12 4e-13\n"
+      "Epsilon0 distanza variabile:  (8.28 ± 0.2)e-12 \n"
      ]
     }
    ],
    "source": [
-    "distanza_variabile_A:const = 0.0125 #B\n",
-    "sigma_distanza_variabile_A = 0.0006 #sigmaB\n",
+    "distanza_variabile_B = 0.012433912099555739 #B\n",
+    "sigma_distanza_variabile_B = 0.00030288795101482175 #sigmaB\n",
     "\n",
-    "EPSILON = COSTANTE_DI_TORSIONE * distanza_variabile_A / (4*np.pi*6000*6000*raggio**2)\n",
-    "sigmaEPSILON = EPSILON * np.sqrt((sigma_COSTANTE_DI_TORSIONE/COSTANTE_DI_TORSIONE)**2+(sigma_distanza_variabile_A/distanza_variabile_A)**2)\n",
-    "print(np.round(EPSILON,14), np.round(sigmaEPSILON,14))\n"
+    "EPSILON1 = COSTANTE_DI_TORSIONE * distanza_variabile_B / (4*np.pi*6000*6000*raggio**2)\n",
+    "sigmaEPSILON1 = EPSILON1 * np.sqrt((sigma_COSTANTE_DI_TORSIONE/COSTANTE_DI_TORSIONE)**2+(sigma_distanza_variabile_B/distanza_variabile_B)**2)\n",
+    "print('Epsilon0 distanza variabile: ',final_val(EPSILON1,sigmaEPSILON1,exp=-12))"
    ]
   },
   {
@@ -77,24 +77,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8.521067539676772e-12 2.7010514221495516e-13\n"
+      "Epsilon0:  (8.63 ± 0.12)e-12 \n"
      ]
     }
    ],
    "source": [
-    "tensione_variabile_A = 3.59e-08 #B\n",
-    "sigma_tensione_variabile_A = 0.11e-08 #sigmaB\n",
+    "tensione_variabile_B = 3.598408064946805e-08 #B\n",
+    "sigma_carica_variabile_B = 4.895069850371449e-10 #sigmaB\n",
     "d = 0.1 #m\n",
-    "EPSILON = (tensione_variabile_A * COSTANTE_DI_TORSIONE * d**2)/(4*np.pi*np.power(raggio,2))\n",
-    "sigmaEPSILON = EPSILON * np.sqrt((sigma_COSTANTE_DI_TORSIONE/COSTANTE_DI_TORSIONE)**2+(sigma_tensione_variabile_A/tensione_variabile_A)**2)\n",
-    "print(EPSILON, sigmaEPSILON)"
+    "EPSILON2 = (tensione_variabile_B * COSTANTE_DI_TORSIONE * d**2)/(4*np.pi*np.power(raggio,2))\n",
+    "sigmaEPSILON2 = EPSILON2 * np.sqrt((sigma_COSTANTE_DI_TORSIONE/COSTANTE_DI_TORSIONE)**2+(sigma_tensione_variabile_B/tensione_variabile_B)**2)\n",
+    "print('Epsilon0 tensione variabile: ',final_val(EPSILON2,sigmaEPSILON2,exp=-12))"
    ]
   }
  ],
