oscillazioni libere fix

--- a/07_OSCILLAZIONI FORZATE SMORZATE/PYTHON/oscillazioni_libere.ipynb
+++ b/07_OSCILLAZIONI FORZATE SMORZATE/PYTHON/oscillazioni_libere.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
     "w = 1 / sigmaomega**2\n",
     "omega_zero = np.average(omega, weights=sigmaomega)\n",
     "errore_strumento_di_misura = 0.1\n",
-    "omega_zero_std = np.sqrt(np.std(omega_zero)**2 + errore_strumento_di_misura**2)\n",
+    "omega_zero_std = np.sqrt(np.std(omega)**2 + errore_strumento_di_misura**2)\n",
     "err_media = omega_zero_std / np.sqrt(len(omega))\n",
     "\n",
     "print('omega_0: ',final_val(omega_zero,err_media, udm='rad s^{-1}'))"
