--- a/02_BILANCIA DI COULOMB/PYTHON/forza_distanza_A.ipynb
+++ b/02_BILANCIA DI COULOMB/PYTHON/forza_distanza_A.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "import os\n",
     "from interpolazione3 import b_std\n",
     "\n",
-    "FILE = os.path.abspath('') + '/../CSV/' + 'v_cost_B.csv'\n",
+    "FILE = os.path.abspath('') + '/../CSV/' + 'forza_distanza_A.csv'\n",
     "\n",
     "fr = pd.read_csv(FILE)  # fileread\n",
     "d = np.array(fr[\"d(cm)\"])/ 100 # m\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
