--- a/02_BILANCIA DI COULOMB/PYTHON/forza_distanza_A.ipynb
+++ b/02_BILANCIA DI COULOMB/PYTHON/forza_distanza_A.ipynb
@@ -12,14 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[186.3 124.7 105.3  92.3  52.   32.3  18. ]\n"
+      "[205.  132.2 109.5  94.9  52.6  32.5  18.1] [4.  2.7 2.4 2.4 1.4 1.8 1. ]\n"
      ]
     }
    ],
@@ -46,12 +46,12 @@
     "# deviazione standard propagata con sensibilità dello strumento (2 deg)\n",
     "sigma_teta = np.array([np.sqrt(b_std([teta1[i],teta2[i],teta3[i]])**2+1**2) for i in range(0,len(teta1))],dtype=np.float64)\n",
     "\n",
+    "teta = teta / correzione # corretto teta per carica non puntiforme\n",
+    "sigma_teta = sigma_teta / correzione\n",
+    "\n",
     "#conversione in radianti\n",
     "teta = teta * np.pi / 180 # rad MEDIA\n",
-    "sigma_teta = sigma_teta * np.pi / 180 # rad DEVIAZIONE STANDARD\n",
-    "\n",
-    "teta = teta / correzione # corretto teta per carica non puntiforme\n",
-    "sigma_teta = sigma_teta / correzione\n"
+    "sigma_teta = sigma_teta * np.pi / 180 # rad DEVIAZIONE STANDARD\n"
    ]
   },
   {
