--- a/02_BILANCIA DI COULOMB/PYTHON/torsione_C.ipynb
+++ b/02_BILANCIA DI COULOMB/PYTHON/torsione_C.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,6 +35,8 @@
     "# err media propagato con errore di 1 deg\n",
     "sigma_teta = np.array([np.sqrt((b_std([teta1[i],teta2[i],teta3[i],teta4[i],teta5[i]])/np.sqrt(5))**2 + 1**2) for i in range(0,len(teta1))],dtype=np.float64) # sigma media\n",
     "\n",
+    "# print(m*1000000,np.round(teta,1),np.round(sigma_teta,1))\n",
+    "\n",
     "teta = teta * np.pi / 180 # rad\n",
     "sigma_teta = sigma_teta * np.pi / 180\n",
     "\n",
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +74,7 @@
       "linearità BX\n",
       "    \n",
       "B: 11487.504499642846\n",
-      "sigmaB 37.90894989790908\n",
+      "sigmaB 47.38618737238635\n",
       "\n",
       "sigmaY: [0.02302247 0.0346438  0.03685911 0.04948863 0.05804368]\n",
       "chiquadro ridotto: 1.47\n",
@@ -111,14 +113,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "K torcente:  (87.05 ± 0.29)e-6 Nrad-1\n"
+      "K torcente:  (87.05 ± 0.36)e-6 Nrad-1\n"
      ]
     }
    ],
