--- a/02_BILANCIA DI COULOMB/PYTHON/misura_costante_dielettrica_assoluta.ipynb
+++ b/02_BILANCIA DI COULOMB/PYTHON/misura_costante_dielettrica_assoluta.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -77,13 +77,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0.013603431745431606\n",
       "Epsilon0 tensione variabile:  (8.63 ± 0.12)e-12 \n"
      ]
     }
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -156,11 +157,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accordo in percentuale Kater: 0.5% << 5%\n",
+      "Distanza variabile: 0.5% << 5%\n",
       "(distanza in sigma: 2.81)\n",
       "errore relativo percentuale: 2.5% << 5%\n",
       "\n",
-      "Accordo in percentuale cadura libera: 6% >> 5%\n",
+      "Tensione variabile: 6% >> 5%\n",
       "(distanza in sigma: 1.86)\n",
       "errore relativo percentuale: 1.4% << 5%\n",
       "\n"
@@ -202,12 +203,12 @@
     "plt.show()\n",
     "\n",
     "p = np.round((1-probability_under_norm(E1,sE1,EA))*100,1)\n",
-    "print(f'Accordo in percentuale Kater: {p}% << 5%')\n",
+    "print(f'Distanza variabile: {p}% << 5%')\n",
     "print(f'(distanza in sigma: {np.round(np.abs(E1 - EA) / sE1,2)})')\n",
     "print(f'errore relativo percentuale: {np.round(sE1/E1*100,1)}% << 5%\\n')\n",
     "\n",
     "p = (1-probability_under_norm(E2,sE2,EA))*100\n",
-    "print(f'Accordo in percentuale cadura libera: {int(p)}% >> 5%')\n",
+    "print(f'Tensione variabile: {int(p)}% >> 5%')\n",
     "print(f'(distanza in sigma: {np.round(np.abs(E2 - EA) / sE2,2)})')\n",
     "print(f'errore relativo percentuale: {np.round(sE2/E2*100,1)}% << 5%\\n')"
    ]
