--- a/04_KATER/PYTHON/misura_g.ipynb
+++ b/04_KATER/PYTHON/misura_g.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -161,20 +161,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "t: 2.0928868240991627\n",
+      "t: 2.09\n",
       "pvalue: 3%\n"
      ]
     }
    ],
    "source": [
-    "t = np.abs(g1-g2)/np.sqrt(sg1**2 + sg2**2)\n",
+    "t = np.round(np.abs(g1-g2)/np.sqrt(sg1**2 + sg2**2),2)\n",
     "p = (1-probability_under_norm(0,1,t))*100\n",
     "print(f\"t: {t}\")\n",
     "print(f\"pvalue: {int(p)}%\")"
