--- a/07_OSCILLAZIONI FORZATE SMORZATE/PYTHON/oscillazioni_libere.ipynb
+++ b/07_OSCILLAZIONI FORZATE SMORZATE/PYTHON/oscillazioni_libere.ipynb
@@ -14,14 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "omega_0:  2.62 ± 0.03 rad s^{-1}\n"
+      "omega_0:  2.62 ± 0.002 rad s^{-1}\n"
      ]
     }
    ],
@@ -29,20 +29,19 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
-    "from interpolazione3 import final_val\n",
+    "from interpolazione3 import final_val, b_std\n",
     "\n",
     "FILE = os.path.abspath('') + '/../CSV/oscillazioni_libere.csv'\n",
     "fr = pd.read_csv(FILE)\n",
     "\n",
-    "omega = np.array(fr['omega (rad/s)'])\n",
+    "omega = np.array(fr['omega (rad/s)'],dtype=np.float64)\n",
     "sigmaomega = np.array(fr['sigmaomega'])\n",
     "w = 1 / sigmaomega**2\n",
-    "omega_zero = np.average(omega, weights=sigmaomega)\n",
-    "errore_strumento_di_misura = 0.1\n",
-    "omega_zero_std = np.sqrt(np.std(omega)**2 + errore_strumento_di_misura**2)\n",
+    "omega_zero = np.average(omega, weights=w)\n",
+    "omega_zero_std = b_std(omega)\n",
     "err_media = omega_zero_std / np.sqrt(len(omega))\n",
     "\n",
-    "print('omega_0: ',final_val(omega_zero,err_media, udm='rad s^{-1}'))"
+    "print('omega_0: ',final_val(omega_zero,err_media,decimals=3, udm='rad s^{-1}'))"
    ]
   },
   {
