fixed propagazione errore

--- a/07_OSCILLAZIONI FORZATE SMORZATE/PYTHON/oscillazioni_libere.ipynb
+++ b/07_OSCILLAZIONI FORZATE SMORZATE/PYTHON/oscillazioni_libere.ipynb
@@ -14,14 +14,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "omega_0:  2.62 ± 0.002 rad s^{-1}\n"
+      "sigma:  0.012\n",
+      "omega_0:  2.62 ± 0.004 rad s^{-1}\n"
      ]
     }
    ],
@@ -38,9 +39,11 @@
     "sigmaomega = np.array(fr['sigmaomega'])\n",
     "w = 1 / sigmaomega**2\n",
     "omega_zero = np.average(omega, weights=w)\n",
-    "omega_zero_std = b_std(omega)\n",
+    "err_strumento_di_misura = 0.01\n",
+    "omega_zero_std = np.sqrt(b_std(omega)**2 +err_strumento_di_misura**2)\n",
     "err_media = omega_zero_std / np.sqrt(len(omega))\n",
     "\n",
+    "print(\"sigma: \",np.round(omega_zero_std,3))\n",
     "print('omega_0: ',final_val(omega_zero,err_media,decimals=3, udm='rad s^{-1}'))"
    ]
   },
