--- a/07_OSCILLAZIONI FORZATE SMORZATE/PYTHON/oscillazioni_smorzate.ipynb
+++ b/07_OSCILLAZIONI FORZATE SMORZATE/PYTHON/oscillazioni_smorzate.ipynb
@@ -16,14 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "omega_0 :  2.58 ± 0.01 \n"
+      "omega:  2.571 ± 0.012 \n",
+      "sigma_omega:  0.037\n",
+      "gamma:  0.164 ± 0.002 \n",
+      "sigma_gamma:  0.007\n",
+      "omega_0 :  2.576 ± 0.037 \n"
      ]
     }
    ],
@@ -31,7 +35,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import os\n",
-    "from interpolazione3 import final_val\n",
+    "from interpolazione3 import final_val,b_std\n",
     "\n",
     "FILE = os.path.abspath('') + '/../CSV/oscillazioni_smorzate.csv'\n",
     "fr = pd.read_csv(FILE)\n",
@@ -41,24 +45,27 @@
     "\n",
     "omega_m = np.average(omega)\n",
     "omega_sm = 0.01 # errore dello strumento di misura\n",
-    "omega_std = np.sqrt(np.std(omega)**2 + omega_sm**2)\n",
+    "omega_std = np.sqrt(b_std(omega)**2 + omega_sm**2)\n",
     "omega_mstd = omega_std/np.sqrt(len(omega))\n",
     "\n",
     "gamma_m = np.average(gamma)\n",
     "gamma_sm = 0.001 # errore dello strumento di misura\n",
-    "gamma_std = np.sqrt(np.std(gamma)**2 + gamma_sm**2)\n",
+    "gamma_std = np.sqrt(b_std(gamma)**2 + gamma_sm**2)\n",
     "gamma_mstd = gamma_std/np.sqrt(len(gamma))\n",
     "\n",
     "omega_zero = np.sqrt(omega_m**2 + gamma_m**2)\n",
     "\n",
+    "n = omega_m**2 * omega_std**2 + gamma_m**2 * gamma_std**2\n",
+    "s = omega_m**2 + gamma_m**2\n",
     "\n",
-    "n = np.sqrt((2*omega_m*omega_mstd)**2 + (2*gamma_m*gamma_mstd)**2)\n",
-    "s = 2*np.sqrt(omega_m**2 + gamma_m**2)\n",
+    "sigma_omega_zero = np.sqrt(n/s)\n",
     "\n",
-    "sigma_omega_zero = n/s\n",
-    "print(\"omega_0 : \",final_val(omega_zero, sigma_omega_zero)) \n",
-    "# TODO: propagare l'errore\n",
-    "\n"
+    "print(\"omega: \",final_val(omega_m,omega_mstd, decimals=3))\n",
+    "print(\"sigma_omega: \",np.round(omega_std,3))\n",
+    "print(\"gamma: \",final_val(gamma_m,gamma_mstd, decimals=3))\n",
+    "print(\"sigma_gamma: \",np.round(gamma_std,3))\n",
+    "print()\n",
+    "print(\"omega_0 : \",final_val(omega_zero, sigma_omega_zero, decimals=3)) "
    ]
   },
   {
@@ -68,9 +75,11 @@
    "source": [
     "### nota propagazione dell'errore:\n",
     "\n",
-    "=(SQRT(POWER(2*C2*C5,2)+POWER(2*D2*D5,2)))/(2*SQRT(C2*C2+D2*D2))\n",
-    "\n",
-    "$\\sigma_{\\omega_0} = \\frac{\\sqrt{(2\\omega\\sigma_\\omega)^2 + (2\\gamma\\sigma_\\gamma)^2}}{2\\sqrt{\\omega^2 + \\gamma^2}}$"
+    "$\\omega_0 = \\sqrt{\\omega^2+\\gamma^2} \\\\$\n",
+    "$\\sigma_{\\omega_0} = \\sqrt{\\left(\\frac{\\partial\\omega_0}{\\partial\\omega}\\right)^2\\sigma_\\omega^2 + \n",
+    "\\left(\\frac{\\partial\\omega_0}{\\partial\\gamma}\\right)^2\\sigma_\\gamma^2} \\Rightarrow\n",
+    "\\sigma_{\\omega_0} = \\sqrt{\\frac{\\omega^2\\sigma_\\omega^2+\\gamma^2\\sigma_\\gamma^2}{\\omega^2+\\gamma^2}}\n",
+    "$"
    ]
   }
  ],
@@ -90,7 +99,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.11.3"
   },
   "orig_nbformat": 4
  },
