aggiungere titoligit add .

--- a/07_OSCILLAZIONI FORZATE SMORZATE/PYTHON/oscillazioni_forzate.ipynb
+++ b/07_OSCILLAZIONI FORZATE SMORZATE/PYTHON/oscillazioni_forzate.ipynb
@@ -96,7 +96,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### incertezze su $\\omega$"
+    "### incertezze su $\\omega$\n",
+    "\n",
+    "disegno il grafico della differenza tra $\\omega$ e $\\omega_f$ per verificare che gli errori siano distributi casualmente (Se non lo fossero si avrebbe una regione sistematicamente maggiore delle altre)"
    ]
   },
   {
