--- a/07_OSCILLAZIONI FORZATE SMORZATE/PYTHON/oscillazioni_smorzate.ipynb
+++ b/07_OSCILLAZIONI FORZATE SMORZATE/PYTHON/oscillazioni_smorzate.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
       "gamma:  0.164 ± 0.002 \n",
       "sigma_gamma:  0.007\n",
       "\n",
-      "omega_0 :  2.576 ± 0.037 \n"
+      "omega_0 :  2.576 ± 0.012 \n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
     "\n",
     "omega_zero = np.sqrt(omega_m**2 + gamma_m**2)\n",
     "\n",
-    "n = omega_m**2 * omega_std**2 + gamma_m**2 * gamma_std**2\n",
+    "n = omega_m**2 * omega_mstd**2 + gamma_m**2 * gamma_mstd**2\n",
     "s = omega_m**2 + gamma_m**2\n",
     "\n",
     "sigma_omega_zero = np.sqrt(n/s)\n",
@@ -100,7 +100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4
  },
