--- a/07_OSCILLAZIONI FORZATE SMORZATE/PYTHON/oscillazioni_libere.ipynb
+++ b/07_OSCILLAZIONI FORZATE SMORZATE/PYTHON/oscillazioni_libere.ipynb
@@ -14,15 +14,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sigma:  0.012\n",
-      "omega_0:  2.62 ± 0.004 rad s^{-1}\n"
+      "omega_0:  2.62 ± 0.004 rad s-1\n",
+      "sigma:  0.012\n"
      ]
     }
    ],
@@ -39,12 +39,12 @@
     "sigmaomega = np.array(fr['sigmaomega'])\n",
     "w = 1 / sigmaomega**2\n",
     "omega_zero = np.average(omega, weights=w)\n",
-    "err_strumento_di_misura = 0.01\n",
+    "err_strumento_di_misura = 0.01 # sensibilità dello strumento variando la posizione dell'area selezionata\n",
     "omega_zero_std = np.sqrt(b_std(omega)**2 +err_strumento_di_misura**2)\n",
     "err_media = omega_zero_std / np.sqrt(len(omega))\n",
     "\n",
-    "print(\"sigma: \",np.round(omega_zero_std,3))\n",
-    "print('omega_0: ',final_val(omega_zero,err_media,decimals=3, udm='rad s^{-1}'))"
+    "print('omega_0: ',final_val(omega_zero,err_media,decimals=3, udm='rad s-1'))\n",
+    "print(\"sigma: \",np.round(omega_zero_std,3))"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "notare all'errore di misura che viene assunto, infatti sebbene l'interpolazione fatta con capstone considerasse errori molto piccoli abbiamo notato che variando l'area dei dati presi in considerazione il valore di $\\omega_0$ variava di circa 0.1 $rad s^{-1}$"
+    "notare all'errore di misura che viene assunto, infatti sebbene l'interpolazione fatta con capstone considerasse errori molto piccoli abbiamo notato che variando l'area dei dati presi in considerazione il valore di $\\omega_0$ variava di circa 0.01 $rad s^{-1}$"
    ]
   }
  ],
