--- a/07_OSCILLAZIONI FORZATE SMORZATE/PYTHON/oscillazioni_smorzate.ipynb
+++ b/07_OSCILLAZIONI FORZATE SMORZATE/PYTHON/oscillazioni_smorzate.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "la raccolta dati viene interpolata con una sinusoide smorzata, raccogliamo misurazioni di $\\gamma$ e $\\omega$\n",
     "\n",
-    "$\\theta (t) = A_0 e^{-\\gamma t} \\sin (\\omega t + \\phi) + \\theta_0$  $\n",
+    "$\\theta (t) = A_0 e^{-\\gamma t} \\sin (\\omega t + \\phi)$\n",
     "\n",
     "$\\omega = \\sqrt{\\omega_0^2 - \\gamma^2} \\Rightarrow \\omega_0 = \\sqrt{\\omega^2 +\\gamma^2}$"
    ]
