fine relazione coulomb

--- a/02_BILANCIA DI COULOMB/PYTHON/forza_distanza_A.ipynb
+++ b/02_BILANCIA DI COULOMB/PYTHON/forza_distanza_A.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,8 @@
       " 0.0175123 ]\n",
       "chiquadro ridotto: 9.46\n",
       "df: 6\n",
-      "pvalue: 14.9%\n"
+      "pvalue: 14.9%\n",
+      "sigmaY medio: 0.03922446644806761\n"
      ]
     }
    ],
@@ -103,7 +104,8 @@
     "plt.legend()\n",
     "plt.show()\n",
     "\n",
-    "print(r)"
+    "print(r)\n",
+    "print(\"sigmaY medio:\", np.average(r.sigmaY))"
    ]
   }
  ],
