--- a/02_BILANCIA DI COULOMB/PYTHON/torsione_C.ipynb
+++ b/02_BILANCIA DI COULOMB/PYTHON/torsione_C.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,8 @@
       "sigmaY: [0.02302247 0.0346438  0.03685911 0.04948863 0.05804368]\n",
       "chiquadro ridotto: 1.47\n",
       "df: 4\n",
-      "pvalue: 83.2%\n"
+      "pvalue: 83.2%\n",
+      "sigmaY medio:  0.04041153617927777\n"
      ]
     }
    ],
@@ -96,7 +97,8 @@
     "plt.ylabel(\"$\\\\bar{\\\\theta}$ (rad)\")\n",
     "plt.show()\n",
     "\n",
-    "print(r)"
+    "print(r)\n",
+    "print(\"sigmaY medio: \",np.average(r.sigmaY))"
    ]
   },
   {
@@ -113,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
