--- a/07_OSCILLAZIONI FORZATE SMORZATE/PYTHON/oscillazioni_libere.ipynb
+++ b/07_OSCILLAZIONI FORZATE SMORZATE/PYTHON/oscillazioni_libere.ipynb
@@ -14,14 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "omega_0:  2.62 ± 0.004 rad s-1\n",
+      "omega_0:  2.6198 ± 0.0039 rad s-1\n",
       "sigma:  0.012\n"
      ]
     }
@@ -36,14 +36,14 @@
     "fr = pd.read_csv(FILE)\n",
     "\n",
     "omega = np.array(fr['omega (rad/s)'],dtype=np.float64)\n",
-    "sigmaomega = np.array(fr['sigmaomega'])\n",
+    "sigmaomega = np.array(fr['sigmaomega']) # sigma omega di capstone (sottostimati usati come pesi)\n",
     "w = 1 / sigmaomega**2\n",
     "omega_zero = np.average(omega, weights=w)\n",
     "err_strumento_di_misura = 0.01 # sensibilità dello strumento variando la posizione dell'area selezionata\n",
     "omega_zero_std = np.sqrt(b_std(omega)**2 +err_strumento_di_misura**2)\n",
     "err_media = omega_zero_std / np.sqrt(len(omega))\n",
     "\n",
-    "print('omega_0: ',final_val(omega_zero,err_media,decimals=3, udm='rad s-1'))\n",
+    "print('omega_0: ',final_val(omega_zero,err_media,decimals=4, udm='rad s-1'))\n",
     "print(\"sigma: \",np.round(omega_zero_std,3))"
    ]
   },
