--- a/08_VENTURI/aria.ipynb
+++ b/08_VENTURI/aria.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
     "import os\n",
     "\n",
     "dir_path = os.path.abspath('') #os.path.dirname(os.path.realpath(__file__))\n",
-    "FILE = dir_path + '/CSV/aria_dati_2.csv'\n",
+    "FILE = dir_path + '/CSV/aria_dati.csv'\n",
     "fr = pd.read_csv(FILE)\n",
     "\n",
     "# m sta per media (valori aventi lo stesso flusso R)\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
